add assignment2 and page2

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 <p>E=MC<sup>2</sup></p> <br>
 <p>H<sub>2</sub>O</p>
 <h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, quam laborum provident accusamus accusantium quae asperiores itaque quaerat cumque, repellendus corporis, nam rerum quia dolorem eveniet beatae debitis! Blanditiis voluptatum explicabo quod adipisci odio itaque quas sint eligendi necessitatibus, quaerat possimus beatae quam praesentium magni saepe eius molestias at exercitationem fugit aliquam tempora repellat, similique dolores eveniet. Eum harum commodi id ut recusandae alias aspernatur accusamus ratione fugit iste placeat, iusto et. Velit, vitae id explicabo nihil qui eum quasi numquam voluptate amet! Hic fuga voluptatem dicta aut dolores dolore consequatur quasi? Itaque ducimus pariatur amet fuga, ut dignissimos debitis.</p></h3>
+<a href="page2.html">Go to Page 2</a>
+<a href="assignment2.html">Go to Assignment 2</a>
 </body>
 </html>
